@@ -116,3 +116,6 @@ NewArrayExpression with tests
 AjSharpMachineTests
 InitializeNewArrayExpression with tests
 array support in Parser (new, access, setting)
+SumArray.ajs in tests
+ExpressionUtilities.ResolveToDictionary with tests
+Non numeric subindices in array processing (using IDictionary)
